2013-03-11 Jérôme Pasquier  <rainbru@free.fr>

	* UPGRADE_FOSWIKI.org (Upgrade to 1.1.8): Written a basic draft.

2013-02-12 Jérôme Pasquier  <rainbru@free.fr>

	* UPGRADE_FOSWIKI.org (Sandbox.WebHome error): seems to be fixed
	by a ?refresh=all URL parameter.

2013-01-24 Jérôme Pasquier  <rainbru@free.fr>

	* skin01/wordpress/single.php: add the 'Bookmark the permalink'
	anchor.

2012-03-22 Jérôme Pasquier  <rainbru@free.fr>

	* skin01/wordpress/function.php (ueb_add_head_link): now handles
	Universal Edit Button.

2012-03-21 Jérôme Pasquier  <rainbru@free.fr>

	* skin01/wordpress/function.php (rainbrurpg_setup): added support
	for both RSS feed and comments RSS feed.

	* skin01/wordpress/style.css (#branding label): find a hack for a better
	searchbox placement

2012-03-19 Jérôme Pasquier  <rainbru@free.fr>

	* skin01/wordpress/style.css (#access a:hover): added for ie6
	compatibility.
	* skin01/wordpress/style.css (.assistive-text): remove commas to be
	compatible with ie6.

2012-03-13 Jérôme Pasquier  <rainbru@free.fr>

	* skin01/wordpress/header.php: add an anchor to the previous script.
	* skin01/common/createHtml5Elements.js: add the JavaScript hack
	to fix the black menu bug in ie6.

2012-02-16 Jérôme Pasquier  <rainbru@free.fr>

	* skin01/wordpress/footer.php: added login link.

2012-02-16 Jérôme Pasquier  <rainbru@free.fr>

	* skin01/wordpress/header.php: include again common/skin.css
	because of the previous fix.
	* skin01/common/skin.css (#rb-skin01-footer): removed the
	position: relative; attribute because it caused many deadlinks
	in the wordpress theme.

2012-02-04 Jérôme Pasquier  <rainbru@free.fr>

	* skin01/wordpress/pattern/: directory removed.
	* skin01/wordpress/pattern/index.php: moved to skin01/wordpress/.
	* skin01/wordpress/index.html: renamed old_index.html, added to archive
	and kept for referenes.

2012-02-03 Jérôme Pasquier  <rainbru@free.fr>

	* configure.in (AC_OUTPUT): added previous Makefile.